--- a/simple-todo.html
+++ b/simple-todo.html
@@ -6,7 +6,11 @@
   <div class="container">
     <header>
       <h1>A Simple To-Do List</h1>
-      <h2>From <a href="https://www.meteor.com/tutorials/blaze/creating-an-app">Meteor Tutorial</a></h2>
+      <h4>From <a href="https://www.meteor.com/tutorials/blaze/creating-an-app">Meteor Tutorial</a></h4>
+
+      <form class="new-task">
+        <input type="text" name="text" placeholder="Type to add new tasks" />
+      </form>
     </header>
 
     <ul>
